# 2-PRACTICA-2-CUATRI

./: README.md
ARQCO/: README.md
ARQCO/Practica1/: FINISTERRAE III.md  acp1.c  acp2.c  acp3.c  scrip_experimento1.sh  scrip_experimento2.sh  script_experimento3.sh
ARQCO/Practica2/ACP2/: counter.h  v1.c  v2.c  v3.c  v4.c
BDII/: README.md
BDII/AdrianQuirogaLinaresBiblioteca/Biblioteca/nbproject/: genfiles.properties  project.properties
BDII/AdrianQuirogaLinaresBiblioteca/ScriptsBD/: BorradoTablas.sql  CreacionTablas.sql  DatosPrueba.sql
COGA/: README.md
COGA/Grua/: Grua.sln  Makefile
COGA/Grua/Grua/: Grua.vcxproj  Grua.vcxproj.filters  arbusto.avif  camara.cpp  camara.h  deps.h  glad.c  grua  lecturaShader_0_9.h  main.cpp  objetos.cpp  objetos.h  shader.frag  shader.vert
COGA/SistemaSolar/: Makefile  README.md  SistemaSolarFinal.sln  camaraTeclado.cpp  camaraTeclado.h  figuras.cpp  figuras.h  gl_platform.h  main.cpp  planetas.cpp  planetas.h  sistema_solar
COGA/SistemaSolar/SistemaSolarFinal/: SistemaSolarFinal.vcxproj  SistemaSolarFinal.vcxproj.filters
Desoft/: README.md
SOII/: README.md
SOII/2_Practica/: prod.c  prodConsHilos.c  prod_sem.c
SOII/3_Practica/: CMakeLists.txt  opt1_cons.c  opt1_prod.c
SOII/Practica1/: accesos.sh  conferencia.sh  ordenacion.sh  passwd_ord.sh  telefonos.sh  tiempo.sh
SOII/Practica2/: cons.c  cons_sem.c  prod.c  prodConsHilos.c  prod_sem.c
SOII/Practica3/: CMakeLists.txt  opt1_cons.c  opt1_prod.c  opt2_prod_cons.c  opt3_prod_cons.c  prod_cons.c
SOII/Práctica4/: cons.c  consLifo.c  prod.c  prodLifo.c
(+33 files in other folders)
